--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Zaara creative agency website template.">
         <meta name="author" content="TeamXcel">
-       
+       <meta name="google-site-verification" content="0qWHwmmDYGPIR6woBAPTpSHGwJugLaUewFN1OQR2WV8" />
         <title>Red Diamond Protection</title>
         
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
